[package]
name = "diceroll"
version = "1.0.0"
authors = ["Trisfald <trisfald@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
rand = "0.8"
colored = "2.0"
